{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 85,
  "lineage": "f66ff0cb-d134-b3e0-963c-d691d6baef72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:internet-gateway/igw-00118ba7aed47d898",
            "id": "igw-00118ba7aed47d898",
            "owner_id": "730335192948",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-igw",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-igw",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:loadbalancer/app/cloudscale-commerce-alb/94cbb90efc334b9d",
            "arn_suffix": "app/cloudscale-commerce-alb/94cbb90efc334b9d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloudscale-commerce-alb-1270455731.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:loadbalancer/app/cloudscale-commerce-alb/94cbb90efc334b9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloudscale-commerce-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-07b759397830c3f3a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07611293812c528b0"
              },
              {
                "subnet_id": "subnet-0e8d871c3e332d79f"
              }
            ],
            "subnets": [
              "subnet-07611293812c528b0",
              "subnet-0e8d871c3e332d79f"
            ],
            "tags": {
              "Environment": "production",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "tags_all": {
              "Environment": "production",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "vpc_id": "vpc-0e50f2564923edbaf",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:loadbalancer/app/cloudscale-commerce-alb/94cbb90efc334b9d"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:listener/app/cloudscale-commerce-alb/94cbb90efc334b9d/b3c995ca87ef03a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:targetgroup/cloudscale-commerce-tg/a4b0357cad6a649b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:listener/app/cloudscale-commerce-alb/94cbb90efc334b9d/b3c995ca87ef03a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:loadbalancer/app/cloudscale-commerce-alb/94cbb90efc334b9d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:targetgroup/cloudscale-commerce-tg/a4b0357cad6a649b",
            "arn_suffix": "targetgroup/cloudscale-commerce-tg/a4b0357cad6a649b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335192948:targetgroup/cloudscale-commerce-tg/a4b0357cad6a649b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloudscale-commerce-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "tags_all": {
              "Environment": "production",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:route-table/rtb-086e83c31574aec22",
            "id": "rtb-086e83c31574aec22",
            "owner_id": "730335192948",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00118ba7aed47d898",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-public-rt",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-public-rt",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b413d1355013e28",
            "region": "ap-south-1",
            "route_table_id": "rtb-086e83c31574aec22",
            "subnet_id": "subnet-0e8d871c3e332d79f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6f4f923a1efe97f",
            "region": "ap-south-1",
            "route_table_id": "rtb-086e83c31574aec22",
            "subnet_id": "subnet-07611293812c528b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:security-group/sg-07b759397830c3f3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b759397830c3f3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudscale-commerce-alb-20250713134358129800000001",
            "name_prefix": "cloudscale-commerce-alb-",
            "owner_id": "730335192948",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-alb-sg",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-alb-sg",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:security-group/sg-0bcd78146ab8a8f35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcd78146ab8a8f35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b759397830c3f3a"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "cloudscale-commerce-web-20250713134401207100000003",
            "name_prefix": "cloudscale-commerce-web-",
            "owner_id": "730335192948",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-web-sg",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-web-sg",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:subnet/subnet-0e4681d8a253f3824",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4681d8a253f3824",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335192948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-private-subnet-1",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-private-subnet-1",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:subnet/subnet-0a2afb624ec6a80d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2afb624ec6a80d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335192948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-private-subnet-2",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-private-subnet-2",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:subnet/subnet-0e8d871c3e332d79f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8d871c3e332d79f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335192948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-public-subnet-1",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-public-subnet-1",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:subnet/subnet-07611293812c528b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07611293812c528b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335192948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-public-subnet-2",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-public-subnet-2",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0e50f2564923edbaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335192948:vpc/vpc-0e50f2564923edbaf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdc8dd7651f032da",
            "default_route_table_id": "rtb-0991db11e0e254710",
            "default_security_group_id": "sg-04afb5a1a6e32de33",
            "dhcp_options_id": "dopt-017b7f37654252de7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e50f2564923edbaf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0991db11e0e254710",
            "owner_id": "730335192948",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "Name": "cloudscale-commerce-vpc",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloudscale-commerce-vpc",
              "Owner": "Your Name",
              "Project": "CloudScale Commerce"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}